<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_baby"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_01"
            android:gravity="center"
            android:text="@string/home_tmall"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_beauty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_02"
            android:gravity="center"
            android:text="@string/home_suan"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_clothing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_03"
            android:gravity="center"
            android:text="@string/home_global"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_family"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_04"
            android:gravity="center"
            android:text="@string/home_wai"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_health_care"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_05"
            android:gravity="center"
            android:text="@string/home_market"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_digital"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_06"
            android:gravity="center"
            android:text="@string/home_charge"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_food"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_03"
            android:gravity="center"
            android:text="@string/home_pig"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_sport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_05"
            android:gravity="center"
            android:text="@string/home_gold"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_fruits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_02"
            android:gravity="center"
            android:text="@string/home_family"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="8dp"
            android:drawableTop="@drawable/home_top_01"
            android:gravity="center"
            android:text="@string/home_category"
            android:textColor="@color/font_second_color"
            android:textSize="12sp" />

    </LinearLayout>
</LinearLayout>
